GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/Recontracting_Account_Closure__c.object-meta.xml
<CustomObject>
    <label>Recontracting / Account Closure</label>
    <nameField>
        <displayFormat>R/AC-{0000}</displayFormat>
        <label>Recontracting/Closure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recontractings / Account Closures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>