GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Account_Closure_Complete__c.field-meta.xml
<CustomField>
    <fullName>Account_Closure_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Closure Complete</label>
    <type>Checkbox</type>
</CustomField>