GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Additional_2_Week_Reminder_Due__c.field-meta.xml
<CustomField>
    <fullName>Additional_2_Week_Reminder_Due__c</fullName>
    <label>Additional 2 Week Reminder Due</label>
    <type>Date</type>
</CustomField>