GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Check_List_of_Items_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>Check_List_of_Items_for_Closure__c</fullName>
    <defaultValue>&quot;Change Contract Status to Cancelled&quot;&amp;BR()&amp;BR()&amp;
&quot;Set Status of all BAF codes to Cancelled&quot; &amp;BR()&amp;BR()&amp;
&quot;IF GDS, cancel ticketing authority in BSP for each&quot; &amp;BR()&amp;BR()&amp;
&quot;Set status of all IATA numbers to cancelled&quot; &amp;BR()&amp;BR()&amp;
&quot;BAF - Notify Credit Control of Closure&quot;&amp;BR()&amp;BR()&amp;
&quot;Remove email address from any external mailing lists&quot;&amp;BR()&amp;BR()&amp;
&quot;Elgar Users - request closure of MIC by Distribution&quot;&amp;BR()&amp;BR()&amp;
&quot;ATB Ticket printer users - ensure unused stocks are returned&quot;&amp;BR()&amp;BR()&amp;
&quot;Cancel letter of credit if held&quot;
&amp;BR()&amp;BR()&amp;
&quot;CONFIRM THAT ALL NECESSARY ACTIONS HAVE BEEN TAKEN, THEN TICK ACCOUNT CLOSURE COMPLETE FIELD BELOW&quot;</defaultValue>
    <label>Check List of Items for Closure</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>