GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Closure_Complete__c.field-meta.xml
<CustomField>
    <fullName>Closure_Complete__c</fullName>
    <label>Closure Complete</label>
    <type>Date</type>
</CustomField>