GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Closure_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Due_Date__c</fullName>
    <label>Closure Due Date</label>
    <type>Date</type>
</CustomField>