GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>TEXT( Trading_Name__r.Status_of_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>