GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Credit_Check_Passed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check Passed?</label>
    <type>Checkbox</type>
</CustomField>