GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Final_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Reminder_Sent__c</fullName>
    <label>Final Reminder Sent</label>
    <type>Date</type>
</CustomField>