GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/New_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Received__c</fullName>
    <label>New Contract Received</label>
    <type>Date</type>
</CustomField>