GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Sent_by_Docusign__c.field-meta.xml
<CustomField>
    <fullName>Sent_by_Docusign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent by Docusign?</label>
    <type>Checkbox</type>
</CustomField>