GearsetPOC/force-app/main/default/objects/Recontracting_Account_Closure__c/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Name</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Recontractings / Account Closures</relationshipLabel>
    <relationshipName>Recontractings_Account_Closures</relationshipName>
    <type>Lookup</type>
</CustomField>